# learning-pytest

./: .env.example  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini
conf/nginx/: djangotesxample.conf
docs/images/pytest_tutorial/: bdd_to_tests.graphml
src/: manage.py
src/nodjango_tests/: README.md  test_learning_pytest.py
src/nodjango_tests/external_services/: README.md
src/nodjango_tests/external_services/tests/: test_mock_requests.py
src/nodjango_tests/fixtures/: README.md
src/nodjango_tests/fixtures/scopes/: test_class_scope.py  test_module_scope.py
src/nodjango_tests/fixtures/shared/: conftest.py
src/nodjango_tests/fixtures_tutorial/: README.md
src/nodjango_tests/fixtures_tutorial/scopes/: test_function_scope.py
src/nodjango_tests/fixtures_tutorial/shared/: conftest.py
src/nodjango_tests/infrastructure/: README.md
src/nodjango_tests/infrastructure/tests/: test_code_styles.py
src/nodjango_tests/pyconar2020_tutorial/: README.md  prices.py  services.py
src/nodjango_tests/pyconar2020_tutorial/tests/: conftest.py  test_prices.py  test_services.py
src/scopes_with_db_access/: README.md  apps.py  test_db_fixture.py  test_using_django_testcase.py  test_using_unsaved_object.py
src/tesxample/: asgi.py  settings.py  urls.py  wsgi.py
tests/fixtures/scopes/: test_class_scope.py  test_function_scope.py  test_module_scope.py
tests/fixtures/shared/: conftest.py  test_one.py  test_three.py  test_two.py
