[tool.poetry]
name = "learning-pytest"
version = "0.1.0"
description = ""
authors = [
    "Andrés Ramirez Miori <andres.ramirez.miori@gmail.com>",
    "Mariano Bianchi <marianobianchi08@gmail.com>"
    ]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"
pytest-django = "^3.9.0"
requests = "^2.24.0"
requests_mock = "^1.8.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
